initial piston generation